# DarkNimbus

./: .gitignore  README.md
ApiGateway/: README.md  package.json
ApiGateway/src/: auth.js  index.js  ws.js
ApiGateway/src/routes/: discord.js  twitch.js  unified.js
DiscordModService/: package.json
DiscordSocialSDKWrapper/: CMakeLists.txt  README.md
DiscordSocialSDKWrapper/docs/: openapi.yaml
DiscordSocialSDKWrapper/include/: handlers.h  logger.h  server.h
DiscordSocialSDKWrapper/src/: handlers.cpp  logger.cpp  main.cpp  server.cpp
DiscordSocialSDKWrapper/tests/: test_handlers.cpp
MinecraftBridge/: minecraft-bridge.env.example  package.json
MinecraftBridge/src/: index.js
MinecraftBridge/src/middleware/: socketAuth.middleware.js
MinecraftBridge/src/routes/: auth.routes.js
MinecraftBridge/src/services/: discord.service.js  minecraft.service.js
MinecraftBridge/src/utils/: jwt.js  logger.js
OverlayFrontend/: README.md  package-lock.json  package.json
OverlayFrontend/public/: index.html
OverlayFrontend/src/: App.js  ModActions.js  TestPanel.js
TwitchIntegration/: README.md  package.json
TwitchIntegration/src/: api.js  index.js  twitchClient.js  ws.js
nimbus8-suite-webui/: package-lock.json  package.json
nimbus8-suite-webui/src/: App.tsx
nimbus8-suite-webui/src/components/: AnalyticsDashboard.tsx  ChatMessage.tsx  ServiceCard.tsx  Sidebar.tsx
nimbus8-suite-webui/src/pages/: DashboardPage.tsx  DevToolsPage.tsx  HelpPage.tsx  LogsHealthPage.tsx  ModerationCenterPage.tsx  ModsPage.tsx  ServicesPage.tsx  SettingsPage.tsx
(+1 files in other folders)
